[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/textures/ui_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/SoulButton.gd" type="Script" id=2]
[ext_resource path="res://resources/default_font.tres" type="DynamicFont" id=3]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 624, 272, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 624, 304, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 656, 304, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="Animation" id=9]
resource_name = "hovered"
length = 0.2
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0 ],
"method": "set_frame"
}, {
"args": [ 1 ],
"method": "set_frame"
} ]
}

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 624, 272, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[node name="SoulButton" type="VBoxContainer"]
margin_right = 32.0
margin_bottom = 47.0
custom_constants/separation = 0
script = ExtResource( 2 )
base = SubResource( 8 )
hovered_1 = SubResource( 10 )
hovered_2 = SubResource( 11 )
wrath = SubResource( 3 )
envy = SubResource( 4 )
greed = SubResource( 5 )
pride = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hovered = SubResource( 9 )

[node name="Current" type="Label" parent="."]
margin_right = 32.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.968627, 0.960784, 0.321569, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1
valign = 1

[node name="Background" type="TextureRect" parent="."]
margin_top = 13.0
margin_right = 32.0
margin_bottom = 45.0
mouse_filter = 0
texture = SubResource( 6 )
stretch_mode = 3

[node name="Icon" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 3.0
mouse_filter = 2
texture = SubResource( 7 )
stretch_mode = 4

[node name="Removing" type="Label" parent="."]
margin_top = 45.0
margin_right = 32.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.968627, 0.960784, 0.321569, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1
valign = 1

[connection signal="gui_input" from="Background" to="." method="_on_Background_gui_input"]
[connection signal="mouse_entered" from="Background" to="." method="_on_Background_mouse_entered"]
[connection signal="mouse_exited" from="Background" to="." method="_on_Background_mouse_exited"]
